--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "blade-ui-kit/blade-ui-kit": "^0.4.0",
         "brunocfalcao/blade-feather-icons": "^3.0",
+        "codeat3/blade-iconpark": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
